Set up Dev Container for local development

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:backend": "run-s build:drizzle build:zod build:server",
     "build:client": "npm run build -w client",
     "build:frontend": "run-s build:backend build:client",
+    "build:all": "run-s build:backend build:client",
     "dev:client": "npm run dev -w client",
     "dev:server": "npm run dev -w server",
     "dev": "run-p dev:*",
@@ -23,10 +24,12 @@
     "format:server": "prettier --write ./server",
     "format:packages": "prettier --write ./packages",
     "push": "npm run push -w packages/drizzle",
+    "migrate": "npm run push -w packages/drizzle",
     "seed": "npm run seed -w packages/drizzle",
     "start:client": "npm run start -w client",
     "start:server": "npm run start -w server",
     "start": "run-p start:*",
+    "deploy:prep": "npm run build:all && npm run migrate",
     "test": "npm run test -w tests-e2e",
     "clean": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && find . -name 'package-lock.json' -type f -delete && find . -name 'yarn.lock ' -type f -delete && find . -name 'dist' -type d -prune -exec rm -rf '{}' +"
   },
