Created a sl-button wrapper called sl-button-fancy to add reusable custom styling for a fancier version of the button

--- a/client/client.env.example
+++ b/client/client.env.example
@@ -1,4 +1,4 @@
-# Client environment variables template (Vite)
-# Copy this file to client.env and update with your actual values
+# Copy this file to client.env and update with your actual values for the target environment
+# Current values are the values that will be used by default in the dev container for local development
 
 VITE_URL_BACKEND=http://localhost:2022
