--- a/server.env.example
+++ b/server.env.example
@@ -1,9 +1,9 @@
-# Local development environment template
-# Copy this file to server.env and update with your actual values
+# Copy this file to server.env and update with your actual values for the target environment
+# Current values are the values that will be used by default in the dev container for local development
 
-DATABASE_URL="postgresql://username:password@localhost:5432/database_name"
+DATABASE_URL="postgresql://postgres:password@db:5432/finance_tracker_dev"
 SSL_MODE="disable"
 CLIENT_URL="http://localhost:3000"
 NODE_ENV="development"
-BETTER_AUTH_SECRET="your-secure-random-secret-key"
+BETTER_AUTH_SECRET="dev-secret-key-change-in-production"
 PORT=2022
