--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
-    "wait-port": "^1.1.0",
-    "eslint": "^8.56.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3"
+    "vitest": "^3.2.4",
+    "wait-port": "^1.1.0"
   }
 }
