--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,10 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@illuxiza/nanostores-immer": "^0.1.0",
     "@nanostores/lit": "^0.2.3",
+    "@nanostores/persistent": "^1.2.0",
+    "@nanostores/query": "^0.3.4",
     "@phosphor-icons/webcomponents": "^2.1.5",
     "@shoelace-style/shoelace": "^2.20.1",
     "@trpc/client": "^11.5.1",
@@ -22,12 +25,11 @@
     "@vaadin/router": "^2.0.0",
     "better-auth": "^1.3.26",
     "dotenv": "^17.2.2",
+    "immer": "^10.1.3",
     "lit": "^3.3.1",
-    "nanostores": "^1.0.1",
-    "phosphor-icons": "^1.4.2"
+    "nanostores": "^1.0.1"
   },
   "devDependencies": {
-    "vitest": "^1.0.0",
     "@eslint/js": "^9.36.0",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
@@ -35,6 +37,7 @@
     "prettier": "^3.6.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.44.1",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vitest": "^1.0.0"
   }
 }
