--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test": "vitest run --run client/test",
+    "test": "vitest run --config ./vitest.config.ts",
     "build:check": "tsc && vite build",
     "lint": "eslint .",
     "start": "vite preview"
