--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx watch src/index.ts",
+    "test": "vitest",
     "lint": "eslint --cache --ext \".js,.ts,.tsx\" src/index.ts",
     "start": "node dist/index.js"
   },
